--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
-av {
-  text-align: center;
-}
-
 body {
-  font-family: 'Roboto', Arial, sans-serif;
-  background-color: #808080;
-  color: #031c21;
-  padding: 1rem;
-  margin-top: 5rem;
+  background-image: url("../media/grey.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 7px;
+  font-family: Arial, sans-serif;
+  color: black; /* Sets the default text color to black */
 }
 
 header {
